NLP TP/texts/robotics/robotics.stackexchange_0000049132.txt
Q:

Install errors on OSX

I am trying to install ROS Groovy using the instructions on http://www.ros.org/wiki/groovy/Installation/OSX/Homebrew/Source.
I am installing on a fresh installation of Mountain Lion. I have installed XCode + command line tools and followed the instructions on the page.
I have chosen the recommended desktop installation.
I get to the point where I run ./src/catkin/bin/catkin_make_isolated --install-space /opt/ros/groovy --install
Compiling the first package, bfl, I get the following error:
[ 40%] Built target orocos-bfl
[ 41%] Building CXX object tests/CMakeFiles/test_complete_filter.dir/complete_filter_test.o
In file included from /Users/jkp/ros_catkin_ws/src/bfl/tests/complete_filter_test.cpp:20:
In file included from /Users/jkp/ros_catkin_ws/src/bfl/tests/complete_filter_test.hpp:32:
In file included from /Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureBootstrapFilter.h:35:
In file included from /Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.h:375:
/Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.cpp:105:27: error: member reference base type 'Mixture<SVar> *' is not a structure
      or union
  for(int i =0 ; i < prior.NumComponentsGet() ; i++)
                     ~~~~~^~~~~~~~~~~~~~~~~
/Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.cpp:111:27: error: member reference base type 'Mixture<SVar> *' is not a structure
      or union
  for(int i =0 ; i < prior.NumComponentsGet() ; i++)
                     ~~~~~^~~~~~~~~~~~~~~~~
/Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.cpp:113:32: error: member reference base type 'Mixture<SVar> *' is not a structure
      or union
    _old_samplesVec[i] = (prior.ComponentGet(i)->ListOfSamplesGet());
                          ~~~~~^~~~~~~~~~~~~
/Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.cpp:362:16: warning: self-comparison always evaluates to true
      [-Wtautological-compare]
        result == result && this->DynamicResampleStepOne(i);
               ^
/Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.cpp:451:16: warning: self-comparison always evaluates to true
      [-Wtautological-compare]
        result == result && this->ResampleOne(i);
               ^
/Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.cpp:362:16: warning: self-comparison always evaluates to true
      [-Wtautological-compare]
        result == result && this->DynamicResampleStepOne(i);
               ^
/Users/jkp/ros_catkin_ws/src/bfl/tests/complete_filter_test.cpp:211:36: note: in instantiation of member function
      'BFL::MixtureParticleFilter<MatrixWrapper::ColumnVector, MatrixWrapper::ColumnVector>::DynamicResampleStep' requested here
  my_filter_mixtureBootstrap = new MixtureBootstrapFilter<ColumnVector,ColumnVector> (&prior_mix, RESAMPLE_PERIOD, RESAMPLE_THRESHOLD);
                                   ^
In file included from /Users/jkp/ros_catkin_ws/src/bfl/tests/complete_filter_test.cpp:20:
In file included from /Users/jkp/ros_catkin_ws/src/bfl/tests/complete_filter_test.hpp:32:
In file included from /Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureBootstrapFilter.h:35:
In file included from /Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.h:375:
/Users/jkp/ros_catkin_ws/src/bfl/src/filter/mixtureParticleFilter.cpp:451:16: warning: self-comparison always evaluates to true
      [-Wtautological-compare]
        result == result && this->ResampleOne(i);
               ^
/Users/jkp/ros_catkin_ws/src/bfl/tests/complete_filter_test.cpp:211:36: note: in instantiation of member function
      'BFL::MixtureParticleFilter<MatrixWrapper::ColumnVector, MatrixWrapper::ColumnVector>::Resample' requested here
  my_filter_mixtureBootstrap = new MixtureBootstrapFilter<ColumnVector,ColumnVector> (&prior_mix, RESAMPLE_PERIOD, RESAMPLE_THRESHOLD);
                                   ^
4 warnings and 3 errors generated.
make[2]: *** [tests/CMakeFiles/test_complete_filter.dir/complete_filter_test.o] Error 1
make[1]: *** [tests/CMakeFiles/test_complete_filter.dir/all] Error 2
make: *** [all] Error 2

Since the OSX installation is brand new, I suppose that I haven't got any other software or libraries installed that interferes with the ROS compilation. Is there any step I have missed in the instructions?
Kind regards,
Jesper

Originally posted by jkp on ROS Answers with karma: 43 on 2013-03-08
Post score: 0

A:

bfl is a Filtering library which is used in some things like the navigation stack.  You probably don't need it, you can just remove it from your workspace and move on:
$ rm -rf /path/to/workspace/src/bfl

Additionally, pcl* is known not to compile currently, so remove it too for now:
$ rm -rf /path/to/workspace/src/pcl*

If you really need bfl to work, I suggest emailing the maintainer since an issue tracker is not listed for it.

Originally posted by William with karma: 17335 on 2013-03-08
This answer was ACCEPTED on the original site
Post score: 1

Original comments
Comment by jkp on 2013-03-12:
Thanks. I am just learning ROS, so I don't know if I will have any use for bfl or not. If I do, I will debug the compilation.

